--- a/static/html/demo.html
+++ b/static/html/demo.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 
-<title>Analysis Selection Page</title>
+<title>Speckle Analysis Server</title>
 <style>
 
     #container {
